# python_road_map

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
road_map/: db.sqlite3
road_map/blog/models/: __init__.py  article.py  category.py
road_map/conf/: settings.py  urls.py
road_map/course/: urls.py  views.py
road_map/course/admin/: __init__.py  course.py  lesson.py  road_map.py
road_map/course/migrations/: 0001_initial.py  0002_alter_lesson_options_roadmap_description_and_more.py  0003_lessonlink.py  0004_alter_course_description_alter_roadmap_description.py
road_map/course/models/: __init__.py  course.py  lesson.py  link.py  roadmap.py
road_map/faq/models/: __init__.py  category.py  faq.py
road_map/templates/: base.html
road_map/templates/course/: course_detail.html  road_mad_detail.html  road_map_list.html
road_map/templates/course/includes/: base_cart.html  course_cart.html  course_nav.html  lesson_cart.html  lesson_links.html  roadmap_cart.html
road_map/templates/includes/: footer.html  navbar_include.html
